k8s/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments
spec:
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: mansuang/comments
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: comments
spec:
  selector:
    app: comments
  ports:
    - port: 4001
      targetPort: 4001
