k8s/event-bus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus
spec:
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: mansuang/event-bus
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus
spec:
  selector:
    app: event-bus
  ports:
    - port: 4005
      targetPort: 4005
