k8s/moderation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation
spec:
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: mansuang/moderation
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: moderation
spec:
  selector:
    app: moderation
  ports:
    - port: 4003
      targetPort: 4003
