k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
spec:
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: mansuang/posts
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts
spec:
  selector:
    app: posts
  ports:
    - port: 4000
      targetPort: 4000
