k8s/query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query
spec:
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: mansuang/query
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: query
spec:
  selector:
    app: query
  ports:
    - port: 4002
      targetPort: 4002
