k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: my-app.com
      http:
        paths:
          - pathType: Prefix
            path: "/posts"
            backend:
              service:
                name: posts
                port:
                  number: 4000
          - pathType: Prefix
            path: "/comments"
            backend:
              service:
                name: comments
                port:
                  number: 4001
          - pathType: Prefix
            path: "/query"
            backend:
              service:
                name: query
                port:
                  number: 4002
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: client
                port:
                  number: 8080
